Vibrancy blur can now be disabled Improved setup page

--- a/apps/ui/src/index.html
+++ b/apps/ui/src/index.html
@@ -36,7 +36,7 @@
       display: inline-block;
       position: absolute;
       top: 0;
-      background-color: #c2185b;
+      background-color: #D180F8;
       border-radius: 100%;
       -webkit-animation: sk-bounce 2s infinite ease-out;
       animation: sk-bounce 2s infinite ease-out;
