Many style changes Improved plugin handling

--- a/apps/ui/src/index.html
+++ b/apps/ui/src/index.html
@@ -7,7 +7,6 @@
     http-equiv="Content-Security-Policy"
   />
   <meta content="no-referrer" name="referrer"/>
-  <link href="https://unpkg.com/pattern.css" rel="stylesheet"/>
   <title>NWPlay</title>
   <style>
     body {
@@ -36,7 +35,7 @@
       display: inline-block;
       position: absolute;
       top: 0;
-      background-color: #D180F8;
+      background-color: #9c27b0;
       border-radius: 100%;
       -webkit-animation: sk-bounce 2s infinite ease-out;
       animation: sk-bounce 2s infinite ease-out;
