--- a/apps/ui/src/index.html
+++ b/apps/ui/src/index.html
@@ -35,7 +35,7 @@
       display: inline-block;
       position: absolute;
       top: 0;
-      background-color: #9c27b0;
+      background-color: #fff;
       border-radius: 100%;
       -webkit-animation: sk-bounce 2s infinite ease-out;
       animation: sk-bounce 2s infinite ease-out;
