- Added Open with modal - Added new Featured on home - Style changes

--- a/apps/ui/src/index.html
+++ b/apps/ui/src/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8"/>
   <meta
-    content="default-src * 'unsafe-inline' 'unsafe-eval'; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline'; media-src * blob:; worker-src * blob:"
+    content="default-src * 'unsafe-inline' 'unsafe-eval'; script-src * 'unsafe-inline' 'unsafe-eval'; script-src-elem * data: 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline'; media-src * blob:; worker-src * blob:"
     http-equiv="Content-Security-Policy"
   />
   <meta content="no-referrer" name="referrer"/>
   <title>NWPlay</title>
   <style>
     body {
-      background-color: #151515;
+      background-color: #1F2020;
     }
 
     .spinner {
